# paperless-dekstop

./: .eslintrc.json  .gitignore  index.html  next.config.js  package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.ts
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: documents.rs  system.rs
src-tauri/src/documents/: favourites.rs  mod.rs  search.rs
src-tauri/src/services/: google.rs
src-tauri/src/store/: local.rs  mod.rs
src-tauri/src/utils/: mod.rs  types.rs
src/app/: layout.tsx  page.tsx
src/app/api/: favourites.ts
src/components/: Carousel.tsx
src/components/Layout/HeaderBar/: HeaderBar.tsx  SearchBar.tsx  UserMenu.tsx
src/components/Layout/Navigation/: Logo.tsx  Navigation.tsx  NavigationCategory.tsx
src/components/Utils/: InvokeWrapper.tsx  Utils.ts
src/styles/: Common.module.css  Content.module.css  Layout.module.css  Main.module.css
src/utils/: backend.ts  utils.ts
