[package]
name = "paperless-desktop"
version = "0.1.0"
edition = "2021"

authors = ["boul2gom <contact@boul2gom.fr>"]
description = "A paperless desktop client"

default-run = "paperless-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
reqwest = "0.11.23"
serde_json = "1.0.108"
tauri = { version = "1.5.4", features = ["api-all"] }

paperless-rs = "0.1.0"

[dependencies.chrono]
version = "0.4.33"
features = ["serde"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
