[package]
name = "paperless-desktop"
version = "0.1.0"
edition = "2021"

authors = ["boul2gom <contact@boul2gom.fr>"]
description = "A paperless desktop client"

default-run = "paperless-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
url = "2.5.0"
bytes = "1.5.0"
sha2 = "0.10.8"
oauth2 = "4.4.2"
tiny_http = "0.12.0"
webbrowser = "0.8.13"
google-drive3 = "5.0.4"

reqwest = "0.11.27"
paperless-rs = { git = "https://github.com/boul2gom/paperless-rs", branch = "develop" }

clokwerk = "0.4.0"
futures-util = "0.3"
serde_json = "1.0.113"

devtools = "0.3.1"
tauri = { version = "1.6.1", features = ["api-all"] }

[dependencies.moka]
version = "0.12.5"
features = ["sync"]

[dependencies.chrono]
version = "0.4.35"
features = ["serde"]

[dependencies.serde]
version = "1.0.196"
features = ["derive"]

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace.git"
branch = "v1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
